# microSaasPixQRCode

./: README.md  pyproject.toml
src/core/pix/application/service/: generate_pix_qrcode.py
src/core/pix/application/service/dto/: pix_qrcode.py
src/core/pix/model/: entity.py  object_value.py
src/core/qrcode/model/: entity.py
src/fastapi/app/: main.py
src/fastapi/routers/: create_pix_qrcode.py
src/fastapi/routers/dto/: input.py
src/pix/model/: entity.py  object_value.py
src/qrcode/model/: entity.py
